--- a/motos/src/Componentes/tercerComponente/footer.css
+++ b/motos/src/Componentes/tercerComponente/footer.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Playfair Display', serif;
+}
+
 footer {
     background: #bdc3c7;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #2c3e50, #bdc3c7);  /* Chrome 10-25, Safari 5.1-6 */
