--- a/motos/src/Componentes/ventas/ventas.css
+++ b/motos/src/Componentes/ventas/ventas.css
@@ -26,7 +26,7 @@ body {
     padding: 60px 0;
 }
 
-header {
+.principal {
     height: 100vh;
     background-image: linear-gradient(to top, rgba(0, 0, 0, 0.534) 0%, #08080881 100%), url(../imagenes/logo.png);
     background-repeat: no-repeat;
@@ -97,11 +97,6 @@ header {
     float: left;
     margin-right: 10px;
   
-}
-
-.gallery {
-    background: #f2f2f2;
-    margin-bottom: 30px;
 }
 
 .gallery {
