--- a/motos/src/Componentes/heade/index.css
+++ b/motos/src/Componentes/heade/index.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .contenedor{
     width: 90%;
     max-height: 1200px;
@@ -7,7 +13,7 @@
 
 }
 
-.header {
+header {
     height: 100vh;
     background-image: linear-gradient(to top, rgba(0, 0, 0, 0.534) 0%, #08080881 100%), url(../la_pagina_web/po\ fondo.jpg);
     background-repeat: no-repeat;
@@ -15,6 +21,7 @@
     background-attachment: fixed;
     background-position: center;
 }
+
 
 .head {
     text-align: center;
