--- a/motos/src/Componentes/heade/index.css
+++ b/motos/src/Componentes/heade/index.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: 'Playfair Display', serif;
+}
+
 .contenedor{
     width: 90%;
     max-height: 1200px;
@@ -32,4 +36,245 @@ header {
     align-items: center;
     flex-direction: column;
     color: #fff;
+}
+
+.carrito {
+    position:absolute;
+    font-size: 30px;
+    left: -55%;
+    margin-top: 5%;
+    color: #fff;
+    cursor: pointer;
+}
+
+.carrito :hover {
+    color: yellow;
+}
+.carrito ::before {
+    content: 11;
+    position: absolute;
+    top: 20px;
+    left: 98px;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+}
+
+.hamburger {
+    position: fixed;
+    top: 30px;
+    right: 30px;
+    background: #fff;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    border-radius: 10px;
+    box-shadow: 0 0 6px rgba(0, 0, 0, .5);
+}
+/*configuracion menu principal*/
+.menu_principal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 30vw;
+    height: 100%;
+    background-image: linear-gradient(135deg, #191f38 0%, #9299a1 100%);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    /*transition: transform .3s ease-in-out;*/
+    transform: translate(110%);
+    box-shadow: 0 0 6px rgba(0, 0, 0, .5);
+}
+
+.spread {
+    transform: translate(0);
+}
+
+.menu_principal a{
+    color: #fff;
+    text-decoration: none;
+    
+}
+
+.menu_principal :hover{
+    color: black;
+}
+
+.titulo {
+    font-size: 60px;
+    margin-bottom: 15px;
+    color: #fff;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+/*espacios entre el texto*/
+.copy {
+    font-weight: 300;
+    font-size: 25px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    color: #fff;
+    align-items: center;
+}
+
+.subtitulo {
+    text-align: center;
+    font-weight: 300;
+    color: black;
+    margin-bottom: 15px;
+    font-size: 60px;
+}
+
+/*tamaño de la vetana*/
+.contenedor_servicio {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+/*tamaño imagen servicio*/
+.contenedor_servicio img {
+    width: 40%;
+}
+
+/*listado de servicios ubicar a la RH*/
+.checklist_servicio {
+    width: 45%;
+}
+
+/*tamaño subtitulos servicios*/
+.service {
+    margin-bottom: 20px;
+}
+
+
+/*color subtitulos servicio*/
+.n_service {
+    margin-bottom: 7px;
+    color: black;
+}
+
+/*persolanizas los numero de servicion*/
+.number{
+    display: inline-block;
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.534) 0%, #08080881 100%);
+    width: 30px;
+    height: 30px;
+    color: #fff;
+    text-align: center;
+    border-radius: 50%;
+    font-weight: 700;
+    line-height: 30px;
+    margin-right: 5px;
+}
+
+/*diseño de fondo galeria*/
+.gallery {
+    background: #f2f2f2;
+}
+
+.contenedor_galeria {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+/*ordenando imagenes de galeria*/
+.img_galeria {
+    object-fit: cover;
+    width: 30%;
+    display: block;
+    margin-bottom: 15px;
+    box-shadow: 0 0 6px rgba(0, 0, 0, .5);
+    cursor: pointer;
+}
+
+.gallery img {
+    object-fit: cover;
+    width: 30%;
+    display: block;
+    margin-bottom: 15px;
+    box-shadow: 0 0 6px rgba(0, 0, 0, .5);
+    cursor: pointer;
+}
+
+.container-img {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    transform: translateX(-100%);
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform .4s ease-in;
+}
+
+.move {
+    transform: translateX(0);  
+}
+
+.img-show {
+    height: 80%;
+    display: block;
+    object-fit: cover;
+}
+
+.copyl {
+    position: fixed;
+    color: #fff;
+    bottom: 40px;
+}
+
+.bx.bx-x {
+    position: absolute;
+    color: #fff;
+    top: 20px;
+    right: 10px;
+    font-size: 40px;
+    cursor: pointer;
+}
+
+.show {
+    transform: translate(0);
+}
+
+.showImage {
+    transform: scale(1);
+}
+
+
+.experts {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.cont_expert {
+    width: 30%;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.cont_expert img {
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+}
+
+.n_expert {
+    display: inline-block;
+    margin-top: 20px;
+    width: 100%;
+    font-weight: 400;
 }
