--- a/motos/src/Componentes/heade/buscador/buscador.css
+++ b/motos/src/Componentes/heade/buscador/buscador.css
@@ -15,7 +15,7 @@ input {
     width: 0;
     padding: 0 20px;
     float: right;
-    color: #000;
+    color:  black;
     border-radius: 50px;
     font-size: 20px;
     border: 1px solid black;
@@ -32,7 +32,7 @@ input {
     top: 0;
     width: 80px;
     height: 80px;
-    background: black;
+    background: beige;
     line-height: 80px;
     border-radius: 50%;
     text-align: center;
@@ -42,7 +42,7 @@ input {
 
 .btn i {
     font-size: 25px;
-    color: white;
+    color: black;
     line-height: 80px;
     transition: all .7s ease;
 }
@@ -56,5 +56,5 @@ input {
 }
 
 .btn:hover {
-    background: #000;
+    background: beige;
 }
