--- a/motos/src/Componentes/heade/index.css
+++ b/motos/src/Componentes/heade/index.css
@@ -109,7 +109,7 @@ body {
     text-align: center;
     justify-content: center;
     align-items: center;
-    
+    margin-top: 10%;
 }
 
 /*espacios entre el texto*/
@@ -297,4 +297,8 @@ body {
     font-size: 40px;
     margin-left: 500px;
     margin-top: 20px;
+}
+
+.mapp{
+    background: #f2f2f2;
 }
