--- a/motos/src/Componentes/heade/nav.css
+++ b/motos/src/Componentes/heade/nav.css
@@ -79,7 +79,7 @@ ul.nav-links li a{
     text-decoration: none;
     color: #fff;
     font-family: "Rosseta";
-    font-size: 6em;
+    font-size: 30px;
     position: relative;
     top: 0;
     transition: all 2s cubic-bezier(0.16, 1, 0.3, 1);
