Organizando nombres de algunas clases

--- a/motos/src/Componentes/heade/nav.css
+++ b/motos/src/Componentes/heade/nav.css
@@ -1,4 +1,4 @@
-.nav{
+/*.nav{
     position: fixed;
     z-index: 2;
 }
@@ -100,4 +100,4 @@ ul.nav-links li a{
     ul.nav-links li a {
         font-size: 5em;
     }    
-}
+}*/
